--- a/cal-heatmap.css
+++ b/cal-heatmap.css
@@ -9,22 +9,89 @@ html {
   	background-size: cover;
   	text-align: center;
 }
+
 #title {
 	text-align: center;
-
 }
 
-#graphback {
-	
-}
-
-p {
+#caltitle {
 	font-family: sans-serif;
 	font-size:2em;
 	color: #000000;
 }
+
+p {
+	font-family: sans-serif;
+	font-size:1.25em;
+	color: #000000;
+}
+
+#select {
+	font-family: sans-serif;
+	font-size:2em;
+	color: #000000;
+}
+
 body {
   font: 10px sans-serif;
+}
+
+button {
+	width: 10em;
+	height: 5em;
+}
+
+#legend {
+	
+}
+
+#empty {
+	width: 5em;
+	height: 5em;
+	background-color: #ededed;
+	display: inline-block;
+}
+
+#zero {
+	width: 5em;
+	height: 5em;
+	background-color: hsla(360, 100%, 100%, 1);
+	display: inline-block;
+}
+
+#one {
+	width: 5em;
+	height: 5em;
+	background-color: hsla(360, 100%, 90%, 1);
+	display: inline-block;
+}
+
+#two {
+	width: 5em;
+	height: 5em;
+	background-color: hsla(360, 100%, 80%, 1);
+	display: inline-block;
+}
+
+#three {
+	width: 5em;
+	height: 5em;
+	background-color: hsla(360, 100%, 70%, 1);
+	display: inline-block;
+}
+
+#four {
+	width: 5em;
+	height: 5em;
+	background-color: hsla(360, 100%, 60%, 1);
+	display: inline-block;
+}
+
+#five {
+	width: 5em;
+	height: 5em;
+	background-color: hsla(360, 100%, 50%, 1);
+	display: inline-block;
 }
 
 .cal-heatmap-container {
@@ -58,8 +125,8 @@ body {
 }
 
 .subdomain-text {
-	font-size: 18px;
-	fill: #060606;
+	font-size: 12px;
+	fill: #000000;
 	pointer-events: none
 }
 
@@ -73,11 +140,11 @@ body {
 }
 
 
-
+/*empty cells*/
 .q0
 {
 	background-color: #fff;
-	fill: #00FF00;
+	fill: #ededed;
 	stroke: #ededed
 }
 
@@ -91,37 +158,37 @@ body {
 .q2
 {
 	background-color: #cedb9c;
-	fill: #55FF00;
+	fill: hsla(360, 100%, 100%, 1);
 }
 
 .q3
 {
 	background-color: #999;
-	fill: #BBFF00;
+	fill: hsla(360, 100%, 90%, 1);
 }
 
 .q4
 {
 	background-color: #637939;
-	fill: #FFBB00;
+	fill: hsla(360, 100%, 80%, 1);
 }
 
 .q5
 {
 	background-color: #3b6427;
-	fill: #FF5500;
+	fill: hsla(360, 100%, 70%, 1);
 }
 .q6
 {
 	background-color: #999;
 	
-	fill: #FF2200;
+	fill: hsla(360, 100%, 60%, 1);
 }
 .q7
 {
 	background-color: #999;
 	
-	fill: #FF0000;
+	fill: hsla(360, 100%, 50%, 1);
 }
 
 rect.highlight
@@ -190,15 +257,16 @@ text.now
 .axis line {
   fill: none;
   stroke: #000;
+  stroke-width: 3px;
   shape-rendering: crispEdges;
 }
 
-.x.axis path {
-  display: none;
+.axis text{
+	font-size: 16px;
 }
 
 .line {
   fill: none;
   stroke: steelblue;
-  stroke-width: 1.5px;
+  stroke-width: 5px;
 }
